fix autocompleate text-align ui problem

--- a/begoodPlus/static_cdn/assets/base/css/style.scss
+++ b/begoodPlus/static_cdn/assets/base/css/style.scss
@@ -323,8 +323,10 @@ body.waiting * {
 
         margin: 5px;
         padding: 3px;
+        
 
         .search-item {
+            text-align: right;
             border: 2px solid black;
             border-radius: 15px;
             //border: 5px black solid;
@@ -343,6 +345,7 @@ body.waiting * {
     }
 
     .search-item {
+        text-align: right;
         .logo {
             //display: inline-block;
             height: 20px;
